--- a/hala.css
+++ b/hala.css
@@ -56,3 +56,38 @@ h1{
 #butt{
     text-align: center;
 }
+
+.align{
+    text-align: center;
+}
+
+.pageno{
+    display: inline-block;
+}
+
+.pageno a {
+    color: white;
+    font-family: 'Megrim';
+    padding: 8px 30px;
+    text-decoration: none;
+    border: 1px solid rgba(236, 236, 236, 0.3);
+    transition: 1.5s;
+}
+
+.pageno a.current{
+    background-color: #ff4dff;
+    box-shadow: 0 0 10px #ffe6ff;
+}
+
+.pageno a:hover:not(.current){
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 10px white;
+}
+
+h3{
+    text-align: center;
+    color: white;
+    letter-spacing: 25px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
